hebrew date easy mylush fix z-index

--- a/public/style.css
+++ b/public/style.css
@@ -198,7 +198,6 @@ nav .hamburger {
       background-color: #fcfcfc; /* רקע חום בהיר */
       width: 100%;
       font-weight: bold;
-      /* padding: 10px 0; */
       text-align: center;
       user-select: none;
       white-space: nowrap;
@@ -206,7 +205,7 @@ nav .hamburger {
       direction: rtl;
       cursor: default;
       position: absolute;
-      z-index: 55555555;
+      z-index: 8;
       top: 65px;
       justify-self: center;
     }
